asm_tests/other_testfiles/invalid_files/error46.s
.name "MORO"
.comment "MORJESTA!"

ld % , r1
